# chebpol

./: .gitignore  DESCRIPTION  NAMESPACE  cleanup  configure  configure.ac
R/: alglib.R  chebpol-deprecated.R  chebpol-package.R  chebpol.R  chebyshev.R  floater-hormann.R  interpolant.R  ipol.R  multilinear.R  polyharmonic.R  simplexlinear.R  stalker.R  tools.R  uniform.R  wrapper.R
inst/: NEWS.Rd
man/: chebappx.Rd  chebappxg.Rd  chebcoef.Rd  chebeval.Rd  chebknots.Rd  chebpol-deprecated.Rd  chebpol-package.Rd  evalongrid.Rd  fhappx.Rd  havealglib.Rd  havefftw.Rd  interpolant.Rd  ipol.Rd  lagappx.Rd  mlappx.Rd  polyh.Rd  slappx.Rd  ucappx.Rd
src/: Makevars.in  Makevars.win  chebpol.c  chebpol.h  config.h.in  rbfalglib.cpp  stalker.c
tests/: all.R  all.Rout.save
tests/Examples/: chebpol-Ex.Rout.save
vignettes/: biblio.bib  chebpol.Rnw  chebusage.Rnw  stalker.Rnw
